Se realizo el banner de LaburandoAndo, se utilizaron imagenes

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,27 @@
     background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
     color: white;
 }
+
+.contenedorImgBanner{
+    width: 800px;
+}
+
+.imgBanner{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border: 5px solid grey;
+}
+
+.btn-Explorar{
+    width: 300px;
+    font-size: 25px;
+    background-color: var(--Violeta);
+}
+
+.btn-Explorar:hover{
+    width: 300px;
+    font-size: 25px;
+    background-color: #501c46;
+    color: white;
+}
