--- a/src/styles/perfilProfesional.css
+++ b/src/styles/perfilProfesional.css
@@ -1,3 +1,7 @@
+.imgProfileUser{
+    width: 100px;
+}
+
 @media all and (min-width:768px){
     .containerProfile{
         width: 100%;
@@ -8,6 +12,12 @@
     }
 
     .menuProfessional .containerMenu{
-        height: 100%;    
+        height: 100vh;    
+    }
+}
+
+@media all and (min-width:1200px){
+    .navItemOffCanvas{
+        font-size: 1.125rem;
     }
 }
