agregue hover a opciones de menu offcanvas y color de fondo a sus iconos en cp MenuProfesional

--- a/src/styles/perfilProfesional.css
+++ b/src/styles/perfilProfesional.css
@@ -2,6 +2,10 @@
     width: 100px;
 }
 
+.iconMenu{
+    color: #9e26ae;
+}
+
 @media all and (min-width:768px){
     .containerProfile{
         width: 100%;
@@ -19,5 +23,9 @@
 @media all and (min-width:1200px){
     .navItemOffCanvas{
         font-size: 1.125rem;
+    }
+
+    .navLink:hover{
+        color: #9e26ae;
     }
 }
