--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,28 @@
-#root{
+#root {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    --Negro:  #000000;
+    --Negro: #000000;
     --Violeta: #853f78;
     --Rosa: #f1d0eb;
     --Lavanda: #f0e6ef;
 }
 
-.mainSection{
+.mainSection {
     flex-grow: 1;
 }
 
-.btn-Profesional{
+.btn-Profesional {
     background-color: var(--Violeta);
     color: white;
 }
 
-.btn-Profesional:hover{
+.btn-Profesional:hover {
     background-color: #501c46;
     color: white;
 }
 
-.instagramLogo{
+.instagramLogo {
     background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
     color: white;
 }
@@ -35,7 +35,31 @@
     background-color: #D1B3FF;
 }
 
+.btn-Registrarse:focus {
+    background-color: #D1B3FF;
+}
+
+.btn-Registrarse:active {
+    background-color: #D1B3FF !important;
+}
+
 .btn-LoginGoogle:hover {
     background-color: #efeef0;
     color: #000000;
+}
+
+.btn-LoginGoogle:active {
+    background-color: #efeef0 !important;
+    color: #000000 !important;
+
+}
+
+.btn-LoginGoogle:focus {
+    background-color: #efeef0;
+    color: #000000;
+}
+
+.btn:active {
+    transform: translateY(2px);
+    transition: cubic-bezier(1, 0, 0, 1) 0.2s;
 }
