defini ancho maximo a form de publicacion y modifique fontsize a label, aplique redondeado a inputs, defini alto de textarea de description y tambien defini color de fondo a btn publicar anuncio en cp FormularioPublicacion

--- a/src/styles/menuLateral.css
+++ b/src/styles/menuLateral.css
@@ -12,11 +12,12 @@
     }
 
     .menuProfessional{
+        height: 100%;
         min-height: 100vh;
     }
 
     .menuProfessional .containerMenu{
-        height: 100vh;    
+        min-height: 100vh;    
     }
 }
 
