corregi espaciado vertical de seccion y color de borde de card publicacion

--- a/src/styles/profesionales.css
+++ b/src/styles/profesionales.css
@@ -2,7 +2,7 @@
     width: 100%;
     min-height: 300px;
     cursor: pointer;
-    border: 1px solid #efedef;
+    border: 1px solid #d6d4d6;
 }
 
 .cardPublication .imgCardPublication{
