--- a/src/styles/profesionales.css
+++ b/src/styles/profesionales.css
@@ -13,6 +13,15 @@ a{
     text-decoration: none;
 }
 
+.cardPublication .description{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    white-space: normal;
+    text-overflow: ellipsis;
+}
+
 .cardPublication .category{
     display: inline;
     min-width: 150px;
