agregue estilos css para mostrar titulo de card publicacion hasta primera linea en pag profesionales

--- a/src/styles/profesionales.css
+++ b/src/styles/profesionales.css
@@ -13,7 +13,8 @@ a{
     text-decoration: none;
 }
 
-.cardPublication .description{
+.cardPublication .description,
+.cardPublication .title{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
