se agrega estilos

--- a/src/styles/Nosotros.css
+++ b/src/styles/Nosotros.css
@@ -4,11 +4,24 @@
 
 .texto-ampliado{
     font-size:x-large !important;
-    color:#853f78 !important;
+    color:#ebc6e5 !important;
     font-weight:bold;
 }
 
 .negrita {
     font-weight:normal;
     text-align: justify;
+}
+
+.color-fondo-somos{
+    background-color: #853f78 ;
+    color:white;
+}
+
+.color-fondo-mision-vision{
+    background-color: #f1d0eb;
+}
+
+.color-fondo-fundadores {
+    background-color: #f0e6ef;
 }
