BM - Feat - Página Profesionales (#16)
* agregue cp Profesionales con seccion y titulo

* agregue grilla en cp Profesionales y agregue cp Filtros, ListaPublicaciones y CardPublicacion con un titulo  en carpeta profesionales

* estilice card de publicacion de pagina profesionales y modifique ademas numero de columnas de grilla para responsividad en todos los dispositivos

* corregi espaciado vertical de seccion y color de borde de card publicacion

* agregue cp FormFiltros con estructura completa agregando algunos estilos con bootstrap

* Complete ruta de paginas en menu de navegacion. Corregi rutas en cp AppRouter. Agregue ruta al detalle en card de publicacion y quite flex-column a contenedor de categorias en pagina profesionales

* agregue w-100 a label de categorias en pagina profesionales y quite padding vertical a contenedor de botones en card publicacion

* quite col-xl-7 de contenedor de publicaciones en grilla de pagina profesionales

* agregue clase input a input de ubicacion y de palabra clave en filtros de pagina profesionales

* agregue estilos css para que la descripcion del anuncio se muestre hasta la primera linea en card de publicacion de pagina profesionales

* agregue estilos css para mostrar titulo de card publicacion hasta primera linea en pag profesionales

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -37,8 +37,6 @@
     object-fit: cover;
 }
 
-
-
 .imgRegistro{
     width: 800px;
     height: 500px;
@@ -64,22 +62,6 @@
     }
 
     .contenedorImgBanner{
-        width: 100%
+        width: 100%;
     }
-}
-
-h1{
-    font-size: 45px;
-}
-
-p{
-    font-size: 25px;
-}
-
-h2{
-    font-size: 40px;
-}
-
-h3{
-    font-size: 35px;
 }
