corregi estilos en pagina de detalle de publicacion

--- a/src/styles/profesionales.css
+++ b/src/styles/profesionales.css
@@ -23,7 +23,7 @@ a{
     text-overflow: ellipsis;
 }
 
-.cardPublication .category{
+.category{
     display: inline;
     min-width: 150px;
     max-width: 200px;
