--- a/src/styles/estiloDetalleDelProfesional.css
+++ b/src/styles/estiloDetalleDelProfesional.css
@@ -1,15 +1,5 @@
-#root{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    --Negro:  #000000;
-    --Violeta: #853f78;
-    --Rosa: #f1d0eb;
-    --Lavanda: #f0e6ef;
-}
-
 .img-circulo-card{
-    width: 100px;
+    width: 150px;
 }
 
 .btn-descripcion-profesional{
@@ -18,7 +8,6 @@
     color: aliceblue;
 }
 
-
 .card-detalle{
     background: rgba( 255, 255, 255, 0.4 );
 box-shadow: 0 8px 3cqi 0 rgba( 31, 38, 135, 0.37 );
@@ -26,11 +15,10 @@ backdrop-filter: blur( 20px );
 -webkit-backdrop-filter: blur( 20px );
 border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-
-.card-detalle{
-    height: 400px;
-    width: 300px;
+min-height: 200px;
+max-height: 350px;
+width: 100%;
+max-width: 250px;
 }
 
 @media (min-width: 768px) {
@@ -70,5 +58,10 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 
     .contenedor-opiniones {
         margin-top: 2rem;
+    }
+
+    .card-detalle{
+        position: sticky;
+        top: 50px;
     }
 }
