--- a/src/styles/registroPasoTres.css
+++ b/src/styles/registroPasoTres.css
@@ -3,3 +3,29 @@
     height: 200px;
 
 }
+
+.position-relative {
+    position: relative;
+  }
+  
+  .upload-button {
+    position: absolute;
+    top: 70%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    background-color: var(--Violeta);
+    color: var(--Lavanda);
+    border: none;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 24px;
+  }
+  
+  .upload-button:hover {
+    background-color: var(--HoverVioleta);
+  }
