--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -27,14 +27,14 @@
   height: 200px;
 }
 
-.sectionBanner{
-    background: var(--Violeta-secondary);
+.sectionBanner,
+.sectionRegister{
+    background: #f7f7f7;
     color: #000;
 }
 
-.sectionRegister{
-    background: var(--Violeta-secondary);
-    color: #000;
+.iconAdd{
+    font-size: 20px;
 }
 
 @media all and (min-width: 360px) {
@@ -59,6 +59,10 @@
   .containerImgBanner {
     max-width: 700px;
   }
+
+.iconAdd{
+    font-size: 25px;
+}
 }
 
 @media all and (min-width: 992px) {
@@ -89,8 +93,8 @@
 
 @media all and (min-width: 1400px) {
     .imgBanner {
-      width: 225px;
-      height: 225px;
+      width: 250px;
+      height: 250px;
       border: 2px solid grey;
     }
 
