--- a/src/styles/profesionales.css
+++ b/src/styles/profesionales.css
@@ -1,16 +1,12 @@
 .cardPublication{
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     cursor: pointer;
     border: 1px solid #d6d4d6;
 }
 
 .cardPublication .imgCardPublication{
     width: 100px;
-}
-
-a{
-    text-decoration: none;
 }
 
 .cardPublication .description,
@@ -48,6 +44,13 @@ a{
         width: 25%;
         min-width: 250px;
         background: #c24ead;
+    }
+.containerDescriptionPost{
+    width: 100%;
+    max-width: 608px;
+}
+    .containerStars{
+        width: 150px;
     }
 }
 
