--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   flex-grow: 1;
 }
 
+.logo{
+  font-size: 30px;
+}
+
 .instagramLogo {
   background: radial-gradient(
       circle farthest-corner at 35% 90%,
@@ -72,7 +76,8 @@ img{
     p,
     .btn, 
     .nav-link,
-    button{
+    button,
+    label{
         font-size: var(--fontText-md);
     }
 }
