modifique campo de imagen de perfil de formulario perfil profesional para que quede igual que campo de img de perfil de pagina registro paso 3

--- a/src/styles/registro.css
+++ b/src/styles/registro.css
@@ -1,4 +1,4 @@
-
+/* 
 .btn-LoginGoogle:hover {
     background-color: #efeef0;
     color: #000000;
@@ -37,4 +37,4 @@
 .boton2-color:hover {
     background-color:#b471a8 !important;
     color:#000000 !important;
-}
+} */
