--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,89 @@
+:root {
+  --Negro: #000000;
+  --Violeta: #91277d;
+  --Violeta-secondary: #902c7e;
+  --Rosa: #ffe3fa;
+  --Lavanda: #ffebfd;
+  --HoverVioleta: #501c46;
+  --fontText-md: 1.125rem; 
+  --fontText-lg: 1.25rem;
+}
+
 #root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    --Negro: #000000;
-    --Violeta: #853f78;
-    --Rosa: #f1d0eb;
-    --Lavanda: #f0e6ef;
-    --HoverVioleta: #501c46;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .mainSection {
-    flex-grow: 1;
+  flex-grow: 1;
+}
+
+.logo{
+  font-size: 30px;
 }
 
 .instagramLogo {
-    background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
-    color: white;
+  background: radial-gradient(
+      circle farthest-corner at 35% 90%,
+      #fec564,
+      transparent 50%
+    ),
+    radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 20% -50%,
+      #5258cf,
+      transparent 50%
+    ),
+    radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 60% -20%,
+      #893dc2,
+      transparent 50%
+    ),
+    radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
+    linear-gradient(
+      #6559ca,
+      #bc318f 30%,
+      #e33f5f 50%,
+      #f77638 70%,
+      #fec66d 100%
+    );
+  color: white;
 }
 
-.input:focus{
-    outline: none;
-    box-shadow: none;
+a{
+  text-decoration: none;
+}
+
+.input:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 .btn:active {
-    transform: translateY(2px);
-    transition: cubic-bezier(1, 0, 0, 1) 0.2s;
+  transform: translateY(2px);
+  transition: cubic-bezier(1, 0, 0, 1) 0.2s;
+}
+
+img{
+    object-fit: cover;
+}
+
+@media all and (min-width: 768px){
+    p,
+    .btn, 
+    .nav-link,
+    button,
+    label{
+        font-size: var(--fontText-md);
+    }
+}
+
+@media all and (min-width: 992px){
+    p{
+        font-size: var(--fontText-lg);
+    }
 }
