--- a/src/pages/Contacto/contacto.css
+++ b/src/pages/Contacto/contacto.css
@@ -1,18 +1,24 @@
-:root{
-    --Violeta: #91277d;
-    --HoverVioleta: #501c46;
-}
-.btnContacto{
-    background-color: var(--Violeta);
-}
-.btnContacto:hover{
-    background-color: var(--HoverVioleta);
+.formContact {
+  width: 100%;
 }
 
-textarea{
-    resize: none;
+.btnContact {
+  width: 100%;
+  background-color: var(--Violeta);
 }
 
-.formularioContenedor{
-    max-width: 800px;
+.btnContact:hover {
+  background-color: var(--HoverVioleta);
+}
+
+@media all and (min-width: 768px) {
+  .formContact {
+    max-width: 700px;
+  }
+}
+
+@media all and (min-width: 992px) {
+  .btnContact {
+    width: 50%;
+  }
 }
