--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
 :root {
   --Negro: #000000;
   --Violeta: #91277d;
@@ -13,6 +15,7 @@
   flex-direction: column;
   min-height: 100vh;
   overflow-x: hidden;
+  font-family: "Questrial", sans-serif;
 }
 
 .mainSection {
@@ -23,43 +26,32 @@
   font-size: 1.8rem;
 }
 
-.instagramLogo {
-  background: radial-gradient(
-      circle farthest-corner at 35% 90%,
-      #fec564,
-      transparent 50%
-    ),
-    radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
-    radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
-    radial-gradient(
-      ellipse farthest-corner at 20% -50%,
-      #5258cf,
-      transparent 50%
-    ),
-    radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
-    radial-gradient(
-      ellipse farthest-corner at 60% -20%,
-      #893dc2,
-      transparent 50%
-    ),
-    radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
-    linear-gradient(
-      #6559ca,
-      #bc318f 30%,
-      #e33f5f 50%,
-      #f77638 70%,
-      #fec66d 100%
-    );
-  color: white;
+.iconInstagram {
+  background: rgb(250, 240, 243);
+  color: rgb(225, 51, 102);
 }
 
 a{
   text-decoration: none;
 }
 
+.input{
+  background: #F4F8FB;
+  color: #424549;
+  border:1px solid #F4F8FB;
+}
+
 .input:focus {
   outline: none;
   box-shadow: none;
+  background: #F4F8FB;
+  border: 1px solid #9692d0;
+}
+
+.input:disabled{
+  background: #F4F8FB;
+  color: #424549;
+  border:1px solid #F4F8FB;
 }
 
 .btn:active {
@@ -69,6 +61,12 @@ a{
 
 img{
     object-fit: cover;
+}
+
+.accordion-button:focus{
+  outline: none;
+  box-shadow: none;
+  background: none;
 }
 
 @media all and (min-width: 1200px){
