Arreglo la parte del registro, agrego un loader, y termino todo lo relacionado con el Login

--- a/src/components/loaders/Loader.css
+++ b/src/components/loaders/Loader.css
@@ -1,6 +1,8 @@
 .loader-wrapper {
     position: fixed;
     z-index: 99999999;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
