agregue los loaders a las paginas de los trabajadores

--- a/src/components/loaders/Loader.css
+++ b/src/components/loaders/Loader.css
@@ -1,7 +1,7 @@
 .loader-wrapper {
   position: fixed;
-  /* top: 0;
-  left: 0; */
+  top: 0;
+  left: 0;
   z-index: 99999999;
   width: 100vw;
   height: 100vh;
