agregue btn eliminar estilizado con condicional para usuario admin logeado y fn handleDelete con customAlert en cp Opinion y fn deleteReview en reviewsActions que invoque en reviewsSlice

--- a/src/domains/publicaciones/styles/detallePublicacion.css
+++ b/src/domains/publicaciones/styles/detallePublicacion.css
@@ -29,6 +29,10 @@
   min-height: 150px;
 }
 
+.btnDeleteReview{
+  width: 25%;
+}
+
 @media (min-width: 768px) {
   .containerDetail {
     display: flex;
