--- a/src/pages/Error404/Error404.css
+++ b/src/pages/Error404/Error404.css
@@ -1,19 +1,12 @@
 .imgError{
-    height: 700px;
-    width: 700px;
+    height: 100%;
+    width: 100%;
 }
 
-@media (min-width: 360px) and (max-width: 767px)
+@media all and (min-width: 768px)
 {
     .imgError{
-        height: 300px;
-        width: 300px;
-    }
-}
-@media (min-width: 768px) and (max-width: 991px)
-{
-    .imgError{
-        height: 500px;
+        height:500px;
         width: 500px;
     }
 }
