agregue estilos css generales para etiquetas de texto para que ningun texto desborde su contenedor y alto minimo para contenedor con paginacion de pagina Soporte Admin. Centre categorias en admin solo para dispositvos > 1400

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,18 @@ img{
   border: 2px solid #d3c5cf;
 }
 
+p,
+.btn, 
+.nav-link,
+button,
+label,
+li,
+span{
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 @media all and (min-width: 1200px){
     p,
     .btn, 
