--- a/src/domains/publicaciones/styles/detallePublicacion.css
+++ b/src/domains/publicaciones/styles/detallePublicacion.css
@@ -15,6 +15,7 @@
 
 .imgProfessional {
   width: 80px;
+  height: 80px;
 }
 
 .cardOpinion{
@@ -54,6 +55,7 @@
 
   .imgProfessional {
     width: 150px;
+    height: 150px;
   }
 }
 
