agregue fn convertirFecha para mostrar fecha de publicacion de anuncio en detalle de profesional y cambie texto de alert al logearse. Agregue texto a tener en cuenta sobre costo de trabajo

--- a/src/hooks/styles/useAlert.css
+++ b/src/hooks/styles/useAlert.css
@@ -34,7 +34,7 @@ custom-container, .alert-container{
   }
   
   .warning{
-    background-color: orange !important;
+    background-color: rgb(203, 145, 38) !important;
   }
   
   .error{
@@ -42,7 +42,7 @@ custom-container, .alert-container{
   }
   
   .text-modal{
-    color: var(--Lavanda);
+    color: #f7f7f7;
     font-weight: bolder !important;
     margin: auto;
   }
