--- a/src/pages/AboutUs/styles/nosotros.css
+++ b/src/pages/AboutUs/styles/nosotros.css
@@ -1,7 +1,7 @@
 .bannerUs {
   position: relative;
   height: 400px;
-  background-image: url("../../img/aboutUs/imgBannerUs.jpg");
+  background-image: url("../../img/aboutUs/imgBannerUs.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
