--- a/src/pages/Home/styles/home.css
+++ b/src/pages/Home/styles/home.css
@@ -34,7 +34,7 @@
 }
 
 .iconAdd{
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 @media all and (min-width: 360px) {
@@ -61,7 +61,7 @@
   }
 
 .iconAdd{
-    font-size: 25px;
+    font-size: 1.5625rem;
 }
 }
 
