--- a/src/common/styles/menu.css
+++ b/src/common/styles/menu.css
@@ -18,6 +18,10 @@
     height: 75px;
 }
 
+.opcionClient{
+    width: 175px;
+}
+
 @media all and (min-width:768px){
     .btn-Profesional {
         width: 50%;
