--- a/src/common/styles/menu.css
+++ b/src/common/styles/menu.css
@@ -1,7 +1,7 @@
 .btn-Profesional {
     width: 75%;
-    background-color: var(--Violeta);
-    color: var(--Lavanda);
+    background-color: var(--HoverVioleta);
+    color:#fff
 }
 
 .dropdown{
@@ -9,8 +9,8 @@
 }
 
 .btn-Profesional:hover {
-    background-color: #501c46;
-    color: var(--Lavanda);
+    background-color:#5a0b57;
+    color:#fff
 }
 
 .imgProfileDropdown{
